# ququer-client

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  PROMPT.md  RAW_PROMPT.md  README.md  TODO.md  ralph.sh
.github/workflows/: release.yml
docs/: design.md  games-zh.md  test.md  trust-zh.md
skills/ququer-agent/: SKILL.md
skills/ququer-agent/evals/: evals.json
skills/ququer-agent/references/: api-types.md
src/: api.rs  auth.rs  cli.rs  config.rs  crypto.rs  keys.rs  lib.rs  main.rs  output.rs  sse.rs  types.rs
src/commands/: audit.rs  economy.rs  game.rs  identity.rs  info.rs  mod.rs
tests/: api_test.rs  auth_test.rs  game_test.rs  identity_test.rs
